--- a/styles.css
+++ b/styles.css
@@ -715,7 +715,7 @@ footer {
     width: 100%;
     border-bottom: solid#f2f2f2;
     margin-top: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 15px;
     padding-right: 110px;
     padding-left: 110px;
     padding-bottom: 20px;
@@ -732,71 +732,30 @@ footer {
     padding-left: 0px;
     padding-right: 0px;
   }
-  #mobile_filtres {
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
 
   header h3 {
-    margin-top: 20px;
-    font-size: 20px;
-    margin: 0;
-    padding: 10px;
+    margin-top: 0px;
+    margin-left: 50px;
+    font-size: 50px;
   }
-
-  .filtre {
-    padding-right: 10px;
-  }
-  .inf {
-    margin-bottom: 0px;
+  header p{
+    font-size: 30px;
+    margin-left: 50px;
   }
 
   form {
     display: flex;
     flex-direction: row;
+    margin-left: 50px;
+    font-size: 35px;
   }
   form i {
-    background-color: #f2f2f2;
-    border-radius: 10px 0px 0px 10px;
-    padding: 23px 17px 17px 17px;
+    border-radius: 20px 0px 0px 20px;
+    padding: 30px 30px 25px 30px;
   }
 
-  #clic {
-    border: solid 1px #f2f2f2;
-    border-left: none;
-    border-right: none;
-    padding: 15px 15px 15px 20px;
-    font-size: 1.1em;
-    font-weight: bold;
-  }
-  header p span {
-    border: solid 2px #f2f2f2;
-    border-radius: 50px;
-    padding: 13px 15px 13px 15px;
-    padding-left: 0px;
-    border-left: none;
-    margin-left: 30px;
-  }
-
-  header span:hover {
-    background-color: #deebff;
-  }
-  span a {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  #bouton {
-    background-color: #0065fc;
-    color: white;
-    border-radius: 0px 10px 10px 0px;
-    border: none;
-    padding: 15px 15px 15px 15px;
-    font-weight: 600;
-  }
-
-  header h3 + header p {
-    font-size: 35px;
+  #clic { 
+    padding: 30px 30px 30px 30px;
   }
   #bouton {
     display: none;
@@ -807,11 +766,45 @@ footer {
   #loupe .fas {
     color: white;
     background-color: #0065fc;
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 20px 20px 20px 20px;
     border: none;
-    padding: 20px 20px 20px 20px;
+    padding: 30px 30px 30px 30px;
     font-weight: 600;
   }
+
+  header strong {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  header p span {
+    border: solid 2px #f2f2f2;
+    border-radius: 50px;
+    padding: 13px 15px 13px 15px;
+    padding-left: 0px;
+    border-left: none;
+    margin-left: 30px;
+  }
+  .inf {
+    margin-bottom: 0px;
+    margin-left: 50px;
+    font-size: 40px;
+  }
+
+  header span:hover {
+    background-color: #deebff;
+  }
+  span a {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  
+
+  header h3 + header p {
+    font-size: 35px;
+  }
+  
 
   /*Body- Hébergements*/
   section {
