--- a/styles.css
+++ b/styles.css
@@ -747,6 +747,7 @@ footer {
     flex-direction: row;
     margin-left: 50px;
     font-size: 35px;
+    margin-bottom: 30px;
   }
   form i {
     border-radius: 20px 0px 0px 20px;
@@ -779,34 +780,29 @@ footer {
   .mobilerow{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-left: 0px;
     width:100%;
   }
+  /*voir*/
   .mobilecolumn{
     display: flex;
+    justify-content: flex-start;
     flex-direction: column;
-    justify-content: space-between;
     margin-left: 0px;
     padding-right: 50px;
   }
-  header strong {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding-left: 0px;
-    margin-left: 50px;
-    margin-right: 260px;
-  }
+  
   header p span {
-    border: solid 2px #f2f2f2;
+    border: solid 3px #f2f2f2;
     border-radius: 50px;
-    padding: 1px 7px 1px 7px;
+    padding: 20px 20px 20px 20px;
     padding-left: 0px;
     margin-left: 0px;
     border-left: none;
     font-size: 30px;
-    margin-right: 0px;
+    margin-right: 20px;
+    font-weight: bold;
   }
   header .fa {
     color: #0065fc;
@@ -866,7 +862,7 @@ footer {
     height: 250px;
     width: 640px;
     border: solid 10px white;
-    border-bottom: solid 110px white;
+    border-bottom: solid 140px white;
     border-radius: 35px;
     margin-top: 30px;
     box-shadow: 1px 1px 5px#c4c4c9;
@@ -892,7 +888,7 @@ footer {
   article p{
     position: absolute;
     margin-left: 33px;
-    font-size: 25px;
+    font-size: 30px;
     
   }
 
@@ -909,7 +905,7 @@ footer {
   #populaires {
     background-color: #f2f2f2;
     height: 950px;
-    width: 108%;
+    width: 109%;
     border-radius: 0px;
     margin: 0;
     margin-bottom: 50px;
